# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer_actions.yml
page_analyzer/: app.py  database.py  html.py  html_parsing.py  http_requests.py  sql_manager.py  url.py  validation.py
page_analyzer/templates/: footer.html  head.html  header.html  index.html  not_found.html  one_url.html  server_error.html  urls.html
