[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Analises web pages"
authors = ["RZen <bartellbe@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
